# term8n-tui-dashboard-n8n

./: .env.example  README.md  pyproject.toml  test_connection.py
src/term8n/: __main__.py  api.py  app.py  config.py
src/term8n/screens/: workflow_diagram.py
src/term8n/widgets/: exec_detail.py  exec_table.py  node_modal.py  sidebar.py  stats_bar.py  sys_bar.py
