[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "term8n"
version = "0.1.0"
description = "TUI dashboard for n8n workflow executions"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
term8n = "term8n.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/term8n"]
